--- a/package.json
+++ b/package.json
@@ -1,8 +1,6 @@
 {
   "name": "@gwjlshebei/axios",
   "version": "1.0.0",
-  "main": "lib/cjs/index.cjs.js",
-  "module": "lib/es/index.es.js",
   "browser": "dist/index.umd.js",
   "keywords": [
     "toolkit",
@@ -14,12 +12,13 @@
   "files": [
     "package.json",
     "dist",
-    "lib",
     "LICENSE"
   ],
   "devDependencies": {
     "rollup": "^2.58.0",
     "rollup-plugin-commonjs": "^10.1.0",
+    "rollup-plugin-node-builtins": "^2.1.2",
+    "rollup-plugin-node-globals": "^1.4.0",
     "rollup-plugin-node-resolve": "^5.2.0",
     "rollup-plugin-typescript": "^1.0.1",
     "tslib": "^2.3.1",
@@ -27,6 +26,7 @@
   },
   "dependencies": {
     "@types/qs": "^6.9.7",
+    "gwjlshebei_my_lib": "^1.0.12",
     "parse-headers": "^2.0.4",
     "qs": "^6.10.1"
   }
